traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:1: error: type mismatch;
 found   : (Int, Boolean, Int)
 required: Boolean
  return (getX()+1,getY()+1==getMondeLargeur(),getMondeHauteur())
         ^